--- a/index.htm
+++ b/index.htm
@@ -7,5 +7,6 @@
 Unbleached flour with the best flavor and textures. Organic sugar only from India and the philipines. Eggs from chickens that are free range. 
 Even our water is special. It comes from the Cascade Mountain springs that we hike up to retrieve. Baking is our passion and we take it very seriously.</p>
 
+<p> Fixing iss53 for branching , this is just some display text </p>
 </body>
 </html>
